@@ -336,7 +336,6 @@
 				F58786F702DE3B8601EA4122,
 				F58786F802DE3B8601EA4122,
 				F58786F902DE3B8601EA4122,
-				F58786FA02DE3B8601EA4122,
 				F58786FB02DE3B8601EA4122,
 				F58786FC02DE3B8601EA4122,
 				F58786FD02DE3B8601EA4122,
@@ -6846,12 +6845,6 @@
 			path = kwq/qt/qpointarray.h;
 			refType = 4;
 		};
-		F58786A902DE3B8601EA4122 = {
-			isa = PBXFileReference;
-			name = qpopupmenu.h;
-			path = kwq/qt/qpopupmenu.h;
-			refType = 4;
-		};
 		F58786AA02DE3B8601EA4122 = {
 			isa = PBXFileReference;
 			name = qprinter.h;
@@ -7332,12 +7325,6 @@
 			settings = {
 			};
 		};
-		F58786FA02DE3B8601EA4122 = {
-			fileRef = F58786A902DE3B8601EA4122;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
 		F58786FB02DE3B8601EA4122 = {
 			fileRef = F58786AA02DE3B8601EA4122;
 			isa = PBXBuildFile;
@@ -7608,7 +7595,6 @@
 				F587852302DE375901EA4122,
 				F58786A802DE3B8601EA4122,
 				F587852402DE375901EA4122,
-				F58786A902DE3B8601EA4122,
 				F58786AA02DE3B8601EA4122,
 				F58786AB02DE3B8601EA4122,
 				F587852502DE375901EA4122,
