@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2001 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2001, 2002 Apple Computer, Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -25,10 +25,6 @@
 
 #ifndef KSIMPLECONFIG_H_
 #define KSIMPLECONFIG_H_
-
-#ifdef HAVE_CONFIG_H
-#include <config.h>
-#endif
 
 #include <kconfig.h>
 #include <qstring.h>
