@@ -1,5 +1,15 @@
 2002-07-15  Darin Adler  <darin@apple.com>
 
+        * WebCore.pbproj/project.pbxproj: Removed unused qpopupmenu.h.
+        * kwq/kdecore/ksimpleconfig.h: Removed unnecessary include of <config.h>.
+        * kwq/kio/global.h: Removed unnecessary include of <config.h>.
+        * kwq/kio/kprinter.h: Emptied out this file.
+        * kwq/qt/qpopupmenu.h: Removed.
+        * kwq/qt/qstylesheet.h: Removed unnecessary include of <config.h>.
+        * kwq/qt/qtextedit.h: Removed unnecessary include of <config.h>.
+
+2002-07-15  Darin Adler  <darin@apple.com>
+
         * kwq/qt/qfontmetrics.h: Remove unused, and not properly implemented,
 	empty constructor. Add some const that was missing. Remove most of the
 	parameters of size().
